# adventofcode

./: .gitignore  .pre-commit-config.yaml  aoc-templ.py  pyproject.toml  setup.py
1/: sol.py
10/: sol.py
11/: sol.py
12/: sol.py
13/: sol.py
14/: sol.py
15/: sol.py
16/: sol.py
17/: .sol.py.swp  input  sol.py  test
18/: sol.py  sol2.py
19/: sol.py
2/: sol.py
20/: sol.py
2015/1/: sol.py
2015/2/: sol.py
2019/1/: sol.py
2019/2/: makefile
2019/3/: sol.py
2019/4/: sol.py
2019/5/: sol.py
2021/16/: sol.py
2021/18/: sol.py  sol2.py
2021/21/: sol.py
2021/22/: sol1.py  sol2.py
2021/23/: solved
2021/24/: sol.py  validator.py
2021/25/: sol.py
2021/8/: sol.py
2022/1/: sol.py
2022/11/: sol.py
2022/13/: sol.py
2022/14/: sol.py
2022/15/: sol.py
2022/16/: sol.py
2022/17/: sol.py
2022/18/: sol.py
2022/19/: sol.py
2022/2/: sol.py
2022/21/: sol.py
2022/22/: sol.py
2022/23/: sol.py
2022/24/: sol.py
2022/3/: sol.py
2022/4/: sol.py
2022/5/: sol.py
2022/6/: sol.py
2022/7/: sol.py
2022/8/: sol.py
2022/9/: sol.py
2023/1/: sol.py
2023/2/: sol.py
21/: sol.py
22/: sol.py  sol2.py
23/: sol.py
24/: input  sol.py
25/: out
3/: sol.py
4/: sol.py
5/: sol.py
6/: sol.py
7/: sol.py
9/: sol.py
src/2018/1/: sol.py
src/2019/1/: makefile
src/2019/2/: sol.py
src/2019/3/: sol.py
src/2021/15/: test
src/2021/17/: sol.py
src/2021/19/: sol.py
src/2021/24/: validator.py
src/2021/25/: sol.py
src/2022/1/: sol.py
src/2022/10/: sol.py
src/2022/12/: sol.py
src/aoclib/: __init__.py
(+27 files in other folders)
